--- a/gallery_images/templates/navbar.html
+++ b/gallery_images/templates/navbar.html
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul id = "navbar-list" class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'index' %}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/admin"> Admin Dashboard</a>
