--- a/Django Projects/django-gallery/imageapp/templates/index.html
+++ b/Django Projects/django-gallery/imageapp/templates/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery app</title>
-</head>
-<body>
-    <h1>Gallery Application</h1>
-</body>
-</html>
+{%extends 'base.html'%}
+
+{% block content %}
+<div>
+    <p>Because like paintings, pictures speak a thousand words!</p>
+</div>
+
+{% endblock %}
