--- a/Django Projects/django-gallery/imageapp/templates/navbar.html
+++ b/Django Projects/django-gallery/imageapp/templates/navbar.html
@@ -10,8 +10,8 @@
   <div class="container-fluid">
       <div><h1>Gallery App</h1></div>
     <div class="navbar-header">
-      <a class="navbar-brand" href="">Home</a>
-      <a class="navbar-brand" href="">Admin Dashboard</a>
+      <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+      <a class="navbar-brand" href="/admin">Admin Dashboard</a>
     </div>
   </div>
 </nav>
