Created a form for the search feature.

--- a/Django Projects/django-gallery/imageapp/templates/navbar.html
+++ b/Django Projects/django-gallery/imageapp/templates/navbar.html
@@ -13,6 +13,16 @@
       <a class="navbar-brand" href="{% url 'index' %}">Home</a>
       <a class="navbar-brand" href="/admin">Admin Dashboard</a>
     </div>
+    <div class = "col-sm-4 col-md-4 navbar-right">
+        <form class="navbar-form" role ="search", action ="{% url 'image_search' %}">
+            <div class = "input-group">
+                <input type="text" class= "form-control" placeholder= "Search" name= "category">
+                <div class="input-group-btn">
+                    <button class="btn btn-outline-info" type="submit"> Search</button>
+                </div>
+            </div>
+        </form>
+    </div>
   </div>
 </nav>
 </body>
